--- a/example.html
+++ b/example.html
@@ -2,6 +2,11 @@
 	<head>
 		<script src="stateless.js"></script>
 		<style>
+			* {
+				-webkit-box-sizing: border-box;
+			       -moz-box-sizing: border-box;
+			        	box-sizing: border-box;
+			}
 			.calc-body {
 				width: 100%;
 				max-width: 400px;
