--- a/unit-test.html
+++ b/unit-test.html
@@ -48,7 +48,7 @@
 				.args(scopeIdentifyer).use(function(){
 					return true
 				})
-				.args()..use(function(){
+				.args().use(function(){
 					return false
 				})
 
