--- a/unit-test.html
+++ b/unit-test.html
@@ -48,7 +48,7 @@
 			function createTesterFunction(nameOfFunctionToTest, objectFunctionBelongsTo = stateless){
 				var selfResults = results[nameOfFunctionToTest] = results[nameOfFunctionToTest] || []
 				var checkerFn = function(input, expectedChecker){
-					var output
+					var outpu
 					try {
 						output = objectFunctionBelongsTo[nameOfFunctionToTest](input)
 					}
@@ -73,6 +73,35 @@
 					}
 				}
 				return checkerFn
+			}
+			
+			function objectEquivilance(a, b){
+				var equvilance = true
+				for(var key in a){
+					if (typeof a[key] != "object" && a[key] === b[key]){
+						equvilance = equvilance && true
+					}
+					else if (typeof a[key] != "object" && a[key] !== b[key]){
+						equvilance = equvilance && false
+					}
+					else if (typoof a[key] == "object"){
+						equivlance = equvilance && objectEquivilance(a[key], b[key])
+					}
+				}
+				
+				for(var key in b){
+					if (typeof b[key] != "object" && b[key] === a[key]){
+						equvilance = equvilance && true
+					}
+					else if (typeof b[key] != "object" && b[key] !== a[key]){
+						equvilance = equvilance && false
+					}
+					else if (typoof b[key] == "object"){
+						equivlance = equvilance && objectEquivilance(b[key], a[key])
+					}
+				}
+				
+				return equivlance
 			}
 
 			var testRegister = createTesterFunction("register", stateless)
